# spaceinvaderspy

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_BUG_FIX.md  DEBUG_GUIDE.md  DOCS_GUIDE.md  GALAGA_SPEC.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  PROJECT.md  QUICK_START.md  QUICK_WINS_COMPLETE.md  QUICK_WINS_SUMMARY.md  README.md  ROADMAP.md  STATUS.md  alien.py  aliens.py  bullet.py  bunker.py  config.py  constants.py  coverage.ini  debug.sh  game.py  helper.py  highscores.json  level.py  mainstructure.py  ogame.py  player.py  pyproject.toml  pytest.ini  requirements.txt  settings.default.json  setup.py  spaceinvaders.py  spaceinvaders.sh  spritesheet.py  (+14 more)
.github/workflows/: ci.yml
assets/images/: SpaceInvaders.arcade.json  SpaceInvaders.atari.json  SpaceInvaders.deluxe.json  SpaceInvaders.intellivision.json
backup/: aliens.py  game.py  level.py  spritesheet.py  sslist.py
docs/: CHANGELOG.md  CLEANUP_SUMMARY.md  CONFIGURATION.md  DEVELOPMENT_STATUS.md  DOCS_GUIDE.md  GAMEPLAY_OVERVIEW.md  HOW_TO_PLAY.md  INDEX.md  PROJECT.md  PROJECT_SPEC_ALIGNMENT.md  REFACTORING_GUIDE.md  RELEASE_NOTES.md  ROADMAP.md  SPRITES.md  STATUS.md  TEST_COVERAGE_AND_GAPS.md  V2_0_PREPARATION_SUMMARY.md  V2_0_ROADMAP.md  space_invaders_spec.md
img/: Alien1.psp
src/: __init__.py  alien.py  bullet.py  bunker.py  config.py  constants.py  main.py  player.py  ufo.py
src/core/: __init__.py  collision_manager.py  game_engine.py  input_handler.py
src/entities/: __init__.py  alien.py  bullet.py  bunker.py  effects.py  player.py  ufo.py
src/systems/: __init__.py  game_state_manager.py
src/ui/: color_scheme.py  continue_screen.py  font_manager.py  initials_entry.py  level_themes.py  menu.py  sprite_digits.py  start_screen_demo.py
src/utils/: __init__.py  audio_manager.py  high_score_manager.py  logger.py  settings_manager.py  sprite_sheet.py  sprite_viewer.py
tests/: __init__.py  conftest.py  pgstub.py  test_bomb.py  test_bullet.py  test_bunker.py  test_gameplay.py  test_player.py
tests/integration/: __init__.py  test_game_flow.py
tests/unit/: test_alien_layout.py  test_bomb_collision.py  test_credit_flow.py  test_entities.py  test_font_manager.py  test_game_state_manager.py  test_layout_visuals.py  test_menu_options.py  test_menu_overlays.py  test_menu_pause.py  test_quick_wins.py  test_settings_persistence.py  test_sprite_viewer.py  test_start_screen_demo.py  test_two_player_mechanics.py
